--- a/pom.xml
+++ b/pom.xml
@@ -16,10 +16,14 @@
         <gson.version>2.8.5</gson.version>
         <guava.version>27.0.1-jre</guava.version>
         <mysql.version>8.0.13</mysql.version>
+        <mybatis.version>3.5.1</mybatis.version>
+        <druid.version>1.1.16</druid.version>
         <jsoup.version>1.11.3</jsoup.version>
         <mail.version>1.4.7</mail.version>
         <protobuf.version>3.6.1</protobuf.version>
         <lombok.version>1.18.6</lombok.version>
+        <log4j.version>1.2.17</log4j.version>
+        <slf4j.version>1.7.26</slf4j.version>
     </properties>
 
     <dependencies>
@@ -64,11 +68,20 @@
             <version>${jsoup.version}</version>
         </dependency>
 
-
+        <dependency>
+            <groupId>org.mybatis</groupId>
+            <artifactId>mybatis</artifactId>
+            <version>${mybatis.version}</version>
+        </dependency>
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>${mysql.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid</artifactId>
+            <version>${druid.version}</version>
         </dependency>
 
         <!-- 邮箱 -->
@@ -96,7 +109,6 @@
             <version>${protobuf.version}</version>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
@@ -104,6 +116,27 @@
             <scope>provided</scope>
         </dependency>
 
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>${log4j.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>${slf4j.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>${slf4j.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>${slf4j.version}</version>
+        </dependency>
 
     </dependencies>
 
@@ -119,7 +152,6 @@
             </plugin>
         </plugins>
     </build>
-
 
 
 </project>
