--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
         <jsoup.version>1.11.3</jsoup.version>
         <mail.version>1.4.7</mail.version>
         <protobuf.version>3.6.1</protobuf.version>
+        <protostuff.version>1.5.9</protostuff.version>
         <lombok.version>1.18.6</lombok.version>
         <log4j.version>1.2.17</log4j.version>
         <slf4j.version>1.7.26</slf4j.version>
@@ -119,6 +120,19 @@
             <artifactId>protobuf-java-util</artifactId>
             <version>${protobuf.version}</version>
         </dependency>
+
+        <!-- protostuff -->
+        <dependency>
+            <groupId>io.protostuff</groupId>
+            <artifactId>protostuff-core</artifactId>
+            <version>${protostuff.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.protostuff</groupId>
+            <artifactId>protostuff-runtime</artifactId>
+            <version>${protostuff.version}</version>
+        </dependency>
+
 
         <dependency>
             <groupId>org.projectlombok</groupId>
