--- a/src/main/resources/db_server.properties
+++ b/src/main/resources/db_server.properties
@@ -1,5 +1,5 @@
 classNameDriver=com.mysql.cj.jdbc.Driver
-url=jdbc:mysql://127.0.0.1:3306/diablo_game?characterEncoding=UTF8&serverTimezone=GMT%2B8
+url=jdbc:mysql://127.0.0.1:3306/chenmq?characterEncoding=UTF8&serverTimezone=GMT%2B8
 username=root
 password=123456
 filters=stat
