--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
 
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
-        <main.class>com.netty.test.Start</main.class>
+        <main.class>com.netty.test.ServerStart</main.class>
 
         <netty.version>4.1.16.Final</netty.version>
         <barchart.udt.version>2.2.1</barchart.udt.version>
@@ -35,7 +35,9 @@
         <lombok.version>1.18.6</lombok.version>
         <log4j.version>1.2.17</log4j.version>
         <slf4j.version>1.7.26</slf4j.version>
+        <logback.version>1.3.0-alpha4</logback.version>
         <junit.version>4.12</junit.version>
+        <commons-lang3.version>3.9</commons-lang3.version>
     </properties>
 
     <dependencies>
@@ -108,6 +110,12 @@
             <artifactId>fluent-hc</artifactId>
             <version>4.5.6</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>${commons-lang3.version}</version>
+        </dependency>
+
 
         <dependency>
             <groupId>com.google.protobuf</groupId>
@@ -151,6 +159,18 @@
             <artifactId>slf4j-api</artifactId>
             <version>${slf4j.version}</version>
         </dependency>
+
+        <!--<dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-core</artifactId>
+            <version>${logback.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>${logback.version}</version>
+        </dependency>-->
+
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-log4j12</artifactId>
@@ -162,7 +182,6 @@
             <artifactId>slf4j-simple</artifactId>
             <version>${slf4j.version}</version>
         </dependency>
-
 
         <dependency>
             <groupId>junit</groupId>
