--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
 
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
-        <main.class>com.netty.test.ServerStart</main.class>
+        <main.class>${project.groupId}.ServerStart</main.class>
 
         <netty.version>4.1.16.Final</netty.version>
         <barchart.udt.version>2.2.1</barchart.udt.version>
