--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
         <mybatis.version>3.5.1</mybatis.version>
         <druid.version>1.1.16</druid.version>
         <jsoup.version>1.11.3</jsoup.version>
+        <dom4j.version>1.6.1</dom4j.version>
         <mail.version>1.4.7</mail.version>
         <protobuf.version>3.6.1</protobuf.version>
         <protostuff.version>1.5.9</protostuff.version>
@@ -65,6 +66,13 @@
             <artifactId>jsoup</artifactId>
             <version>${jsoup.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>dom4j</groupId>
+            <artifactId>dom4j</artifactId>
+            <version>${dom4j.version}</version>
+        </dependency>
+
 
         <dependency>
             <groupId>org.mybatis</groupId>
