--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@
 server.port=9901
 # 扫描的包地址
 scan.mapping=com.netty.test
+#消息序列化实现类
+serializer.impl.class=com.netty.test.coder.msg.ProtobufCoderImpl
